@@ -57,62 +57,6 @@ class RegistrationToolTests(RequestTest):
         verifyClass(IActionProvider, self._getTargetClass())
         verifyClass(IRegistrationTool, self._getTargetClass())
 
-    def test_testPropertiesValidity_email_with_plus( self ):
-
-        # CMF Collector #322
-
-        tool = self._makeOne().__of__( self.root )
-        self.root.portal_membership = FauxMembershipTool()
-
-        props = { 'email' : 'user+site@example.com'
-                , 'username' : 'username'
-                }
-
-        result = tool.testPropertiesValidity( props, None )
-
-        self.failUnless( result is None )
-
-    def test_testPropertiesValidity_email_with_underscore( self ):
-        # Test for collector item 326: Email alias ending w/underscore
-        tool = self._makeOne().__of__( self.root )
-        self.root.portal_membership = FauxMembershipTool()
-
-        props = { 'email' : 'username_@example.com'
-                , 'username' : 'username'
-                }
-
-        result = tool.testPropertiesValidity( props, None )
-
-        self.failUnless( result is None )
-
-    def test_testPropertiesValidity_email_with_singlequote( self ):
-
-        # CMF Collector #401
-
-        tool = self._makeOne().__of__( self.root )
-        self.root.portal_membership = FauxMembershipTool()
-
-        props = { 'email' : "user'site@example.com"
-                , 'username' : 'username'
-                }
-
-        result = tool.testPropertiesValidity( props, None )
-
-        self.failUnless( result is None )
-
-    def test_testPropertiesValidity_new_invalid_email( self ):
-
-        tool = self._makeOne().__of__( self.root )
-        self.root.portal_membership = FauxMembershipTool()
-
-        props = { 'email' : 'this is not an e-mail address'
-                , 'username' : 'username'
-                }
-
-        result = tool.testPropertiesValidity( props, None )
-
-        self.failIf( result is None, 'Invalid e-mail passed inspection' )
-
     def test_spamcannon_collector_243( self ):
 
         INJECTED_HEADERS = """
